# mandelbrot-mp

./: CMakeLists.txt  README.md  bitmap.c  main.c  mandelbrot.c  regions_of_interest
